Update styles to avoid image stretching

--- a/src/app/components/v2/modal-tutorial/modal-tutorial-styles.scss
+++ b/src/app/components/v2/modal-tutorial/modal-tutorial-styles.scss
@@ -77,31 +77,28 @@
 .row {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
 
   @media #{$tablet-portrait} {
-    flex: 50%;
     flex-direction: row;
   }
 }
 
 .column {
   display: flex;
-  flex-direction: column;
-  padding-right: 20px;
-
-  @media #{$tablet-landscape} {
-    flex: 50%;
-    flex-direction: row;
-  }
+  flex-direction: row;
+  margin-left: 15px;
 }
 
 .columnText {
   line-height: 1.3;
   font-size: 14px;
   padding: 10px 0;
+  width: 160px;
 }
 
 .image {
   height: 115px;
   width: 115px;
+  margin-left: 15px;
 }
